Fixing technical debt. I solved it in Figma but for some reason my stubborn ass refused to follow my own tried and tested advice. Not because I thought my approach was better but because I forgot that's why it was implemented. To keep order and avoid overlapping while having the foresight to improve the scalability and expansion of the project. That was a mouth-full.

--- a/source/layouts/components/Navigation/clocking/Navigation.clocking.scss
+++ b/source/layouts/components/Navigation/clocking/Navigation.clocking.scss
@@ -105,7 +105,7 @@
 @mixin mobile-portrait {
 }
 
-nav[class*='track-main'] {
+nav[class*='clocking-leftbar'] {
   @media screen and (orientation: landscape) {
     @include desktop-landscape();
   }
